Changes to CircleCI

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,10 +1,9 @@
 version: 2.1
-
 orbs:
-  circleci-orb: samvera/circleci-orb@0.3.2
+  samvera: samvera/circleci-orb@0.3.2
 
 jobs:
-  build_spec_test:
+  build:
     parameters:
       gemfile:
         description: "Gemfile to run"
@@ -14,73 +13,70 @@ jobs:
         description: "Ruby version"
         default: "2.6.5"
         type: "string"
-      solr_port:
-        type: string
-        default: '8985'
-      fcrepo_port:
-        type: string
-        default: '8986'
-      fcrepo_version:
-        type: string
-        default: '4.6'
-      redis_version:
-        type: string
-        default: '4'
-      mysql_version:
-        type: string
-        default: '8.0.19'
-      rails_version:
-        type: string
-        default: '5.1.6'
-      solr_config_path:
-        type: string
-      solr_core:
-        type: string
-        default: 'hydra-test'
       bundler_version:
         type: string
-        default: '2.0.1'
+        default: '1.17.3'
+
     docker:
+      # specify the version you desire here
+      # - image: circleci/ruby:2.6.5-node-browsers
       - image: circleci/ruby:<< parameters.ruby_version >>-node-browsers-legacy
-      - image: ualbertalib/docker-fcrepo4:<< parameters.fcrepo_version>>
-        environment:
-          CATALINA_OPTS: "-Djava.awt.headless=true -Dfile.encoding=UTF-8 -server -Xms512m -Xmx1024m -XX:NewSize=256m -XX:MaxNewSize=256m -XX:PermSize=256m -XX:MaxPermSize=256m -XX:+DisableExplicitGC"
-      - image: solr:7-alpine
-        command: bin/solr -cloud -noprompt -f -p <<parameters.solr_port>>
-      - image: circleci/redis:<<parameters.redis_version>>
-      - image: circleci/mysql:<<parameters.mysql_version>>
-    parallelism: 4
-    environment:
-      BUNDLE_GEMFILE: << parameters.gemfile >>
-      RAILS_VERSION: << parameters.rails_version >>
-      BUNDLE_PATH: vendor/bundle
-      COVERALLS_PARALLEL: true
-      BUNDLE_JOBS: 4
-      BUNDLE_RETRY: 3
-      RAILS_ENV: test
-      RACK_ENV: test
-      FCREPO_TEST_PORT: 8986/fcrepo
-      SPEC_OPTS: --profile 10 --format RspecJunitFormatter --out /tmp/test-results/rspec.xml --format progress
+      # Specify service dependencies here if necessary
+      # CircleCI maintains a library of pre-built images
+      # documented at https://circleci.com/docs/2.0/circleci-images/
+      # - image: circleci/postgres:9.4
+
+    working_directory: ~/ucrate
+
     steps:
-      - samvera/cached_checkout
-      - samvera/bundle:
-          ruby_version: << parameters.ruby_version >>
-          bundler_version: << parameters.bundler_version >>
-      - samvera/install_solr_core:
-          solr_config_path: << parameters.solr_config_path >>
-          core_name: << parameters.solr_core >>
-      - samvera/rubocop
-      - run: bundle exec rake db:create db:schema:load
-      - samvera/parallel_rspec
-      - store_artifacts:
-          path: coverage
-      - deploy:
+      - checkout
+
+      - restore_cache:
+          keys:
+            - v1-dependencies-{{ checksum "Gemfile.lock" }}
+            # fallback to using the latest cache if no exact match is found
+            - v1-dependencies-
+
+      - run:
+          name: Configure Bundler
           command: |
-            curl -k https://coveralls.io/webhook?repo_token=$COVERALLS_REPO_TOKEN -d "payload[build_num]=$CIRCLE_BUILD_NUM&payload[status]=done"
-workflows:
-  ci:
-    jobs:
-      - bundle_spec_test:
-          ruby_version: "2.5.5"
-          name: "ruby2-5-5"
-          solr_config_path: 'solr/config'
+            echo 'export BUNDLER_VERSION=$(cat Gemfile.lock | tail -1 | tr -d " ")' >> $BASH_ENV
+            source $BASH_ENV
+            gem install bundler -v << parameters.bundler_version >>
+      - run:
+          name: Install Dependencies
+          command: |
+            bundle install --jobs=4 --retry=3 --path vendor/bundle
+            sudo apt-get update
+            sudo apt-get install xvfb libfontconfig wkhtmltopdf
+      - save_cache:
+          paths:
+            - ./vendor/bundle
+          key: v1-dependencies-{{ checksum "Gemfile.lock" }}
+
+      - run: bundle exec rake db:create
+      - run: bundle exec rake db:schema:load
+
+      - run:
+          name: Rubocop
+          command: |
+            gem install rubocop
+            bundle exec rubocop
+      # run tests!
+      - run:
+          name: Run Tests
+          command: |
+            mkdir /tmp/test-results
+            TEST_FILES="$(circleci tests glob "spec/**/*_spec.rb" | \
+              circleci tests split --split-by=timings)"
+            bundle exec rspec \
+              --format progress \
+              --out /tmp/test-results/rspec.xml \
+              --format progress \
+              $TEST_FILES
+      # collect reports
+      - store_test_results:
+          path: /tmp/test-results
+      - store_artifacts:
+          path: /tmp/test-results
+          destination: test-results
