Adds FileSystem to BrowseEverything

--- a/.env.development
+++ b/.env.development
@@ -18,7 +18,7 @@ SCHOLAR_BROWSE_EVERYTHING_DROPBOX_ID=dropbox_id
 SCHOLAR_BROWSE_EVERYTHING_DROPBOX_SECRET=dropbox_secret                        
 SCHOLAR_BROWSE_EVERYTHING_GOOGLE_ID=google_id
 SCHOLAR_BROWSE_EVERYTHING_GOOGLE_SECRET=google_secret
-
+SCHOLAR_BROWSE_EVERYTHING_FILE_PATH=mnt_path
 
 # Database settings
 SCHOLAR_DATABASE_ADAPTER=sqlite3
