--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -325,7 +325,7 @@ Metrics/CyclomaticComplexity:
     - 'app/helpers/api_helper.rb'
     - 'app/controllers/bulkrax/importers_controller.rb'
 
-Lint/HandleExceptions:
+Lint/SuppressedException:
   Exclude:
     - 'app/controllers/concerns/scholar/works_controller_behavior.rb'
     - 'spec/features/doi_validation_spec.rb'
