# Fixes XRay log continues to grow. * Made XRay Max log size configurable through `.env`. * Added new `.env` entry `SCHOLAR_XRAY_MAX_LOG_SIZE`.

--- a/.env.test
+++ b/.env.test
@@ -75,3 +75,6 @@ SCHOLAR_DOI_URL=https://api.test.datacite.org/dois
 
 # API
 API_KEY={ :development => 'testKey'}
+
+# XRay max log size in MB, must be an integer value
+SCHOLAR_XRAY_MAX_LOG_SIZE=10
