--- a/.env.development
+++ b/.env.development
@@ -76,3 +76,6 @@ SCHOLAR_DOI_URL=https://api.test.datacite.org/dois
 
 # API
 API_KEY={ :development => 'scholarDEV' }
+
+# XRay max log size in MB, must be an integer value
+SCHOLAR_XRAY_MAX_LOG_SIZE=10
