--- a/config/browse_everything_providers.yml
+++ b/config/browse_everything_providers.yml
@@ -9,9 +9,9 @@ dropbox:
 box:
   :client_id:     <%= ENV["SCHOLAR_BROWSE_EVERYTHING_BOX_ID"] %>
   :client_secret: <%= ENV["SCHOLAR_BROWSE_EVERYTHING_BOX_SECRET"] %>
-google_drive:
-  :client_id: <%= ENV["SCHOLAR_BROWSE_EVERYTHING_GOOGLE_ID"] %>
-  :client_secret: <%= ENV["SCHOLAR_BROWSE_EVERYTHING_GOOGLE_SECRET"] %>
+#google_drive:
+#  :client_id: <%= ENV["SCHOLAR_BROWSE_EVERYTHING_GOOGLE_ID"] %>
+#  :client_secret: <%= ENV["SCHOLAR_BROWSE_EVERYTHING_GOOGLE_SECRET"] %>
 file_system:
   :home: <%= ENV["SCHOLAR_BROWSE_EVERYTHING_FILE_PATH"] %>
 # s3:
