Upgrades BulkRAX to version 4.5.0

--- a/.env.development
+++ b/.env.development
@@ -25,7 +25,7 @@ SCHOLAR_DATABASE_ADAPTER=sqlite3
 SCHOLAR_DATABASE_HOST=
 SCHOLAR_DATABASE_NAME=db/development.sqlite3
 SCHOLAR_DATABASE_PASSWORD=
-SCHOLAR_DATABASE_POOL=5
+SCHOLAR_DATABASE_POOL=10
 SCHOLAR_DATABASE_PORT=
 SCHOLAR_DATABASE_TIMEOUT=5000
 SCHOLAR_DATABASE_USERNAME=
@@ -63,6 +63,8 @@ SCHOLAR_RIIIF_CACHE=/tmp/riiif
 SCHOLAR_SOFFICE_PATH=soffice
 SCHOLAR_SOLR_URL=http://127.0.0.1:8983/solr/hydra-development
 SCHOLAR_UPLOAD_PATH=/tmp/uploads
+SCHOLAR_BULKRAX_IMPORT_PATH=/tmp/uploads
+SCHOLAR_BULKRAX_EXPORT_PATH=/tmp/uploads
 
 # DOI
 SCHOLAR_DOI_USERNAME=apitest
