--- a/.env.test
+++ b/.env.test
@@ -62,6 +62,7 @@ SCHOLAR_RIIIF_CACHE=/tmp/riiif
 SCHOLAR_SOFFICE_PATH=soffice
 SCHOLAR_SOLR_URL=http://127.0.0.1:8985/solr/hydra-test
 SCHOLAR_UPLOAD_PATH=/tmp/uploads
+SCHOLAR_BULKRAX_PATH/tmp/uploads
 
 # DOI
 SCHOLAR_DOI_USERNAME=apitest
