--- a/config/analytics.yml
+++ b/config/analytics.yml
@@ -2,8 +2,13 @@
 # To integrate your app with Google Analytics, uncomment the lines below and add your API key information.
 #
 analytics:
-  app_name: GOOGLE_OAUTH_APP_NAME
-  app_version: GOOGLE_OAUTH_APP_VERSION
-  privkey_path: <%= ENV["SCHOLAR_ANALYTICS_PRIVKEY_PATH"] %>
-  privkey_secret: <%= ENV["SCHOLAR_ANALYTICS_PRIVKEY_SECRET"] %>
-  client_email: <%= ENV["SCHOLAR_ANALYTICS_CLIENT_EMAIL"] %>
+  ga4:
+    analytics_id: <%= ENV['GOOGLE_ANALYTICS_ID'] %>
+
+  google:
+    analytics_id: <%= ENV['GOOGLE_ANALYTICS_ID'] %>
+    app_name: GOOGLE_OAUTH_APP_NAME
+    app_version: GOOGLE_OAUTH_APP_VERSION
+    privkey_path: <%= ENV["SCHOLAR_ANALYTICS_PRIVKEY_PATH"] %>
+    privkey_secret: <%= ENV["SCHOLAR_ANALYTICS_PRIVKEY_SECRET"] %>
+    client_email: <%= ENV["SCHOLAR_ANALYTICS_CLIENT_EMAIL"] %>
